# MBP-T05-ChildLock

./: .gitattributes  .gitignore  CMakeLists.txt  CodeTest.md  DEVELOPMENT.md  FG1_V1.c  Failure_Mode  GITHUB.md  README.md  Software_Detailed_Design  Software_Detailed_Design.md  Software_Requirement_Specification  _Sidebar.md  build_log.txt  cmake_config_log.txt  cmake_out.txt  cmake_out2.txt  extract_pdf.py  extract_pptx.py  sequence diagram  system_test_cases.md  tmp_push_err.txt  tmp_remote.txt  update_pptx.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  review.md
.github/workflows/: ci.yml
Diagrams/: State Diagram.drawio  Use Case - 1.drawio  Use Case - 2.drawio  Use Case -6.drawio  Use_Case_3.drawio  Use_Case_4.drawio  Use_Case_5.drawio  Use_Case_7.drawio  Usecase Description  Usecase_Description.md
diagram/sequence/: use case 1.drawio  use case 4.drawio
doc/uml_diagram/sequence/: sequence_uc1.drawio  sequence_uc2.drawio  sequence_uc3.drawio  sequence_uc4.drawio  sequence_uc5.drawio  sequence_uc6.drawio  sequence_uc7.drawio
doc/uml_diagram/state/: childlock_state.drawio
doc/uml_diagram/usecase/: usecase_emergency.drawio  usecase_normal.drawio
docs/: MBP-T05_ChildLock_결과발표.pptx  MBP-T05_ChildLock_결과발표_Final (1).pptx  MBP-T05_ChildLock_결과발표_Final_v2.pptx  MBP-T05_ChildLock_결과발표_Updated.pptx  MOBIUS_PBL_결과발표_템플릿.pptx  ReqTest.md  SL_온라인PT_발표자료.pptx  System_Test_Cases.xlsx  System_Test_Cases_ExpertV2.xlsx  system_test_cases.md  박기준_PBL_포트폴리오.pptx  주제1_5팀_PBL최종_제출자료.pptx
include/: F06_HmiAndEventLogger.h  F07_RearRiskEvaluation.h  F08_RearRiskProtectionController.h  F09_RearSeatOccupancyAlert.h  childlock_types.h
include/childlock/: rear_door_open_block_handler.h
src/: F07_RearRiskEvaluation.c  F08_RearRiskProtectionController.c  F10_IgnitionOffStatusAlert.c
src/childlock/: rear_door_open_block_handler.c  state_persistence_manager.c
test/: CMakeLists.txt  test_F06_HmiAndEventLogger.cpp  test_F07_RearRiskEvaluation.cpp  test_F08_RearRiskProtectionController.cpp  test_F09_RearSeatOccupancyAlert.cpp  test_rear_door_open_block_handler.cpp
tmp/: create_pptx.py  inspect_pptx.py  pptx_layout.txt  screenshot.py  update_pptx_v5.py  update_slide5.py  update_slide5_v2.py
